--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "my-js-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bit-buffer": "^0.2.5",
     "crc": "^4.3.2",
